# Vidi_CircuitPython_XPT2046

./: LICENSE  README.rst  README.rst.license  pyproject.toml  requirements.txt  vidi_xpt2046.py
.github/workflows/: release_gh.yml
examples/: xpt2046_simpletest.py
