# SPDX-FileCopyrightText: 2022 Alec Delaney, written for Adafruit Industries
# SPDX-FileCopyrightText: Copyright (c) 2024 Lovro Jakic for VIDI
#
# SPDX-License-Identifier: MIT

[build-system]
requires = [
    "setuptools",
    "wheel",
    "setuptools-scm",
]

[project]
name = "vidi-circuitpython-xpt2046"
description = "CircuitPython driver library for the XPT2046 touch screen controller."
version = "0.0.0+auto.0"
readme = "README.rst"
authors = [
    {name = "VIDI", email = "lovro.jakicc@gmail.com"}
]
urls = {Homepage = "https://github.com/lovrojakic/Vidi_CircuitPython_XPT2046"}
keywords = [
    "adafruit",
    "blinka",
    "circuitpython",
    "micropython",
    "xpt2046",
    "resistive",
    "touch",
    "screen",
]
license = {text = "MIT"}
classifiers = [
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Embedded Systems",
    "Topic :: System :: Hardware",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]
dynamic = ["dependencies", "optional-dependencies"]

[tool.setuptools]
# TODO: IF LIBRARY FILES ARE A PACKAGE FOLDER,
#       CHANGE `py_modules = ['...']` TO `packages = ['...']`
py-modules = ["vidi_xpt2046"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}
optional-dependencies = {optional = {file = ["optional_requirements.txt"]}}
